--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Budget</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script">
 </head>
 
-<body>
-    <h3 class="text-center">Budget Auto Repair</h3>
-    <h4 class="text-center">Site Under Construction</h4>
+<body style="background-color: rgb(0,0,0);">
+    <h3 class="text-center" style="font-family: 'Aguafina Script', cursive;color: rgb(0,128,255);">Budget Auto Repair</h3>
+    <!-- Start: 1 Row 1 Column -->
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center"><img class="img-fluid" src="/assets/img/websuc.jpg?h=750199701018b71dca63867ad3ceec9f"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End: 1 Row 1 Column -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
