--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/assets/css/styles.min.css?h=716ef6782bea738733afee46d8292615">
 </head>
 
-<body style="background-color: #000000;font-family: 'Roboto Condensed', sans-serif;">
+<body style="background-color: rgb(0,0,0);font-family: 'Roboto Condensed', sans-serif;">
     <!-- Start: Navigation Clean -->
     <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
         <div class="container">
@@ -34,29 +34,36 @@
     </nav>
     <!-- End: Navigation Clean -->
     <!-- Start: 1 Row 1 Column -->
-    <div style="margin-top: 72px;">
+    <div style="margin-top: 80px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-12 text-center"><img class="rounded img-fluid" src="/assets/img/budgetHeader.jpg?h=2a82cdbee410c5a29b1316e3cac6b5b1"></div>
+                <div class="col-md-12 col-lg-10 offset-lg-1 text-center"><img class="img-fluid" src="/assets/img/Budget%20Logo.png?h=43a141b0e0a82c7de25deae7993b5ea1"></div>
             </div>
         </div>
     </div>
     <!-- End: 1 Row 1 Column -->
-    <!-- Start: 1 Row 2 Columns -->
-    <div style="margin-top: 11px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-md-1 offset-lg-1 text-center"><a href="tel:239-590-8375" target="_blank"><img class="rounded img-fluid" src="/assets/img/cnBudget.jpg?h=660d2dc0622cce05de8162ae2a766fd9"></a></div>
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-sm-2 offset-md-2 offset-lg-2 text-center"><a href="mailto:budgetrepairfortmyers@gmail.com" target="_blank"><img class="rounded img-fluid" src="/assets/img/semBudget.jpg?h=336af696c61838cb025836c21e18b3b3"></a></div>
-            </div>
-        </div>
-    </div>
-    <!-- End: 1 Row 2 Columns -->
     <!-- Start: 1 Row 1 Column -->
-    <div style="margin-top: 8px;">
+    <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center"><img class="img-fluid" src="/assets/img/BudgServices.png?h=77ff4337efc6850c7c6d861f9ce22a3b"></div>
+                <div class="col-md-12 col-lg-8 col-xl-8 offset-lg-2 offset-xl-2">
+                    <h2 class="text-center" style="color: rgb(255,164,48);">Why Choose Us?</h2>
+                    <p style="color: rgb(255,164,48);font-size: 20px;">At Budget Auto Repair, we make our customers our priority. Our philosophy is to provide our customers with a positive personal experience by offering them outstanding service carried out by qualified technicians using the highest quality
+                        products and fair prices.<br></p>
+                    <h2 class="text-center" style="color: rgb(239,128,13);">Our Code:</h2>
+                    <ul style="color: rgb(255,164,34);font-size: 18px;">
+                        <li>Give you a free visual inspection and cost estimate<br></li>
+                        <li>Make only the necessary repairs<br></li>
+                        <li>Inform you before making any repair not included in the original estimate<br></li>
+                        <li>Install only first-choice national-branded parts<br></li>
+                        <li>Give you a national warranty, and honour it<br></li>
+                        <li>Return, upon request, all parts which have been replaced<br></li>
+                        <li>Ensure your personalized service, from reception to after-sale service<br></li>
+                        <li>Deliver, on time, a quality job satisfying industry standards at a fair price<br></li>
+                        <li>Give you advice to improve your driving security<br></li>
+                        <li>Offer on-going training to our personnel so they remain at the forefront of technological advancement<br></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
