--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #000000;">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/assets/css/styles.min.css?h=716ef6782bea738733afee46d8292615">
 </head>
 
-<body style="background-color: #000000;font-family: 'Roboto Condensed', sans-serif;">
+<body>
     <!-- Start: Navigation Clean -->
     <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
         <div class="container">
@@ -23,8 +23,8 @@
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://budgetrepairswfl.com/" style="color: rgb(255,164,48);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,48);">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,48);">About Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,49);">Contact Us</a></li>
@@ -33,34 +33,6 @@
         </div>
     </nav>
     <!-- End: Navigation Clean -->
-    <!-- Start: 1 Row 1 Column -->
-    <div style="margin-top: 72px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-lg-12 text-center"><img class="rounded img-fluid" src="/assets/img/budgetHeader.jpg?h=2a82cdbee410c5a29b1316e3cac6b5b1"></div>
-            </div>
-        </div>
-    </div>
-    <!-- End: 1 Row 1 Column -->
-    <!-- Start: 1 Row 2 Columns -->
-    <div style="margin-top: 11px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-md-1 offset-lg-1 text-center"><a href="tel:239-590-8375" target="_blank"><img class="rounded img-fluid" src="/assets/img/cnBudget.jpg?h=660d2dc0622cce05de8162ae2a766fd9"></a></div>
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-sm-2 offset-md-2 offset-lg-2 text-center"><a href="mailto:budgetrepairfortmyers@gmail.com" target="_blank"><img class="rounded img-fluid" src="/assets/img/semBudget.jpg?h=336af696c61838cb025836c21e18b3b3"></a></div>
-            </div>
-        </div>
-    </div>
-    <!-- End: 1 Row 2 Columns -->
-    <!-- Start: 1 Row 1 Column -->
-    <div style="margin-top: 8px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center"><img class="img-fluid" src="/assets/img/BudgServices.png?h=77ff4337efc6850c7c6d861f9ce22a3b"></div>
-            </div>
-        </div>
-    </div>
-    <!-- End: 1 Row 1 Column -->
     <div class="row">
         <div class="col">
             <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
