--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,49);">Contact Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/Contact.html" style="color: rgb(255,164,49);">Contact Us</a></li>
                 </ul>
         </div>
         </div>
@@ -68,10 +68,8 @@
         </div>
     </div>
     <!-- End: 1 Row 1 Column -->
-    <div class="row">
-        <div class="col">
-            <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
-        </div>
+    <div class="col text-center">
+        <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
