--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #000000;">
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/assets/css/styles.min.css?h=716ef6782bea738733afee46d8292615">
 </head>
 
-<body>
+<body style="background-color: rgb(0,0,0);font-family: 'Roboto Condensed', sans-serif;">
     <!-- Start: Navigation Clean -->
     <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
         <div class="container">
@@ -23,20 +23,34 @@
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,48);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,48);">About Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://budgetrepairswfl.com/" style="color: rgb(255,164,48);">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,49);">Contact Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/Contact.html" style="color: rgb(255,164,49);">Contact Us</a></li>
                 </ul>
         </div>
         </div>
     </nav>
     <!-- End: Navigation Clean -->
-    <div class="row">
-        <div class="col">
-            <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
+    <!-- Start: 1 Row 2 Columns -->
+    <div class="text-center" style="margin-top: 81px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text-center"><img class="img-fluid" src="/assets/img/budgetmap2.jpg?h=a652d20c8a7c80dd11986ac4be36439c"></div>
+                <div class="col-md-8 offset-md-2 text-center">
+                    <h2 class="text-center" style="color: rgb(255,164,48);"><strong>Contact Us:</strong></h2>
+                    <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -6px;">Budget Auto Repair</h3>
+                    <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -3px;"><a href="tel:239-590-8375" style="font-size: 23px;"><strong>(239)590-8375</strong></a></h3>
+                    <h5 class="text-center" style="color: rgb(255,164,48);margin-bottom: -2px;margin-top: 7px;">1945 Coronado Road</h5>
+                    <h5 class="text-center" style="color: rgb(255,164,48);">Fort Myers, FL 33901</h5>
+                </div>
+            </div>
         </div>
+    </div>
+    <!-- End: 1 Row 2 Columns -->
+    <div class="col">
+        <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
