--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(255,164,49);">Contact Us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/Contact.html" style="color: rgb(255,164,49);">Contact Us</a></li>
                 </ul>
         </div>
         </div>
@@ -53,7 +53,7 @@
     </div>
     <!-- End: 1 Row 2 Columns -->
     <!-- Start: 1 Row 1 Column -->
-    <div style="margin-top: 8px;">
+    <div class="text-center" style="margin-top: 8px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center"><img class="img-fluid" src="/assets/img/BudgServices.png?h=77ff4337efc6850c7c6d861f9ce22a3b"></div>
@@ -61,10 +61,8 @@
         </div>
     </div>
     <!-- End: 1 Row 1 Column -->
-    <div class="row">
-        <div class="col">
-            <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
-        </div>
+    <div class="col text-center">
+        <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
