--- a/About.html
+++ b/About.html
@@ -47,11 +47,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-8 col-xl-8 offset-lg-2 offset-xl-2">
-                    <h2 class="text-center" style="color: rgb(255,164,48);">Why Choose Us?</h2>
-                    <p style="color: rgb(255,164,48);font-size: 20px;">At Budget Auto Repair, we make our customers our priority. Our philosophy is to provide our customers with a positive personal experience by offering them outstanding service carried out by qualified technicians using the highest quality
+                    <h2 class="text-center" style="color: rgb(255,255,255);font-family: 'Roboto Condensed', sans-serif;"><strong><em>Why Choose Us?</em></strong></h2>
+                    <p style="color: rgb(255,255,255);font-size: 20px;">At Budget Auto Repair, we make our customers our priority. Our philosophy is to provide our customers with a positive personal experience by offering them outstanding service carried out by qualified technicians using the highest quality
                         products and fair prices.<br></p>
-                    <h2 class="text-center" style="color: rgb(239,128,13);">Our Code:</h2>
-                    <ul style="color: rgb(255,164,34);font-size: 18px;">
+                    <h2 class="text-center" style="color: rgb(255,255,255);"><strong><em>Our Code:</em></strong></h2>
+                    <ul style="color: rgb(255,255,255);font-size: 18px;">
                         <li>Give you a free visual inspection and cost estimate<br></li>
                         <li>Make only the necessary repairs<br></li>
                         <li>Inform you before making any repair not included in the original estimate<br></li>
