--- a/index.html
+++ b/index.html
@@ -56,7 +56,21 @@
     <div class="text-center" style="margin-top: 8px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center"><img class="img-fluid" src="/assets/img/BudgServices.png?h=77ff4337efc6850c7c6d861f9ce22a3b"></div>
+                <div class="col-12 col-sm-8 col-md-6 col-lg-5 offset-sm-2 offset-md-3 offset-lg-4" style="font-size: 19px;">
+                    <ul class="text-left" style="color: rgb(255,255,255);font-size: 27px;">
+                        <li>Electrical systems</li>
+                        <li>Brakes, rotors and hoses</li>
+                        <li>Drivelines</li>
+                        <li>Engine diagnostics</li>
+                        <li>Fluid exchange services</li>
+                        <li>Air conditioning systems</li>
+                        <li>Oil, lube and filter services</li>
+                        <li>Muffler and exhaust</li>
+                        <li>Tires and alignment</li>
+                        <li>Steering and suspension</li>
+                        <li>Battery testing and replacement</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
