--- a/Contact.html
+++ b/Contact.html
@@ -39,9 +39,9 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center"><img class="img-fluid" src="/assets/img/budgetmap2.jpg?h=a652d20c8a7c80dd11986ac4be36439c"></div>
                 <div class="col-md-8 offset-md-2 text-center">
-                    <h2 class="text-center" style="color: rgb(255,164,48);"><strong>Contact Us:</strong></h2>
+                    <h2 class="text-center" style="color: rgb(255,255,255);margin-bottom: -6px;"><strong><em>Contact Us:</em></strong></h2><a href="tel:239-590-8375" style="font-size: 23px;margin-top: 6px;"><strong>(239)590-8375</strong></a>
                     <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -6px;">Budget Auto Repair</h3>
-                    <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -3px;"><a href="tel:239-590-8375" style="font-size: 23px;"><strong>(239)590-8375</strong></a></h3>
+                    <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -3px;"></h3>
                     <h5 class="text-center" style="color: rgb(255,164,48);margin-bottom: -2px;margin-top: 7px;">1945 Coronado Road</h5>
                     <h5 class="text-center" style="color: rgb(255,164,48);">Fort Myers, FL 33901</h5>
                 </div>
