--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <div class="text-center" style="margin-top: 8px;">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-8 col-md-6 col-lg-5 offset-sm-2 offset-md-3 offset-lg-4" style="font-size: 19px;">
-                    <ul class="text-left" style="color: rgb(255,255,255);font-size: 27px;">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 offset-sm-2 offset-md-3 offset-lg-1" style="font-size: 19px;">
+                    <ul class="text-left" style="color: rgb(255,255,255);font-size: 20px;">
                         <li>Electrical systems</li>
                         <li>Brakes, rotors and hoses</li>
                         <li>Drivelines</li>
@@ -69,6 +69,18 @@
                         <li>Tires and alignment</li>
                         <li>Steering and suspension</li>
                         <li>Battery testing and replacement</li>
+                    </ul>
+                </div>
+                <div class="col-sm-8 col-md-6 col-lg-4 offset-sm-2 offset-md-3 offset-lg-2">
+                    <h2 style="color: rgb(255,255,255);"><strong><em>Hours of Operation</em></strong></h2>
+                    <ul class="list-unstyled text-center" style="color: rgb(255,255,255);font-size: 20px;">
+                        <li>Sun. &nbsp; &nbsp;Closed</li>
+                        <li>Mon. &nbsp; 8am - 7pm</li>
+                        <li>Tue. &nbsp; &nbsp;8am - 7pm</li>
+                        <li>Wed. &nbsp; 8am - 7pm</li>
+                        <li>Thur. &nbsp; 8am - 7pm</li>
+                        <li>Fri. &nbsp; &nbsp; &nbsp;8am - 7pm</li>
+                        <li>Sat. &nbsp; &nbsp; 8am - 7pm</li>
                     </ul>
                 </div>
             </div>
