--- a/Contact.html
+++ b/Contact.html
@@ -14,25 +14,6 @@
 </head>
 
 <body style="background-color: rgb(0,0,0);font-family: 'Roboto Condensed', sans-serif;">
-    <!-- Start: Navigation Clean -->
-    <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
-        <div class="container">
-            <a class="navbar-brand" href="#" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
-                <p style="margin-left: 12px;">Budget Auto Repair</p>
-            </a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="font-size: 14px;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon" style="background-color: #ffa430;"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://budgetrepairswfl.com/" style="color: rgb(255,164,48);">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/Contact.html" style="color: rgb(255,164,49);">Contact Us</a></li>
-                </ul>
-        </div>
-        </div>
-    </nav>
-    <!-- End: Navigation Clean -->
     <!-- Start: 1 Row 2 Columns -->
     <div class="text-center" style="margin-top: 81px;">
         <div class="container">
@@ -52,6 +33,25 @@
     <div class="col">
         <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
     </div>
+    <!-- Start: Navigation Clean -->
+    <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
+        <div class="container">
+            <a class="navbar-brand" href="#" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
+                <p style="margin-left: 12px;height: 0;width: 0;"><img src="/assets/img/Budget%20Logo.png?h=43a141b0e0a82c7de25deae7993b5ea1" style="height: 33px;margin-bottom: 13px;margin-top: -12px;"></p>
+            </a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="font-size: 14px;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon" style="background-color: #ffa430;"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://budgetrepairswfl.com/" style="color: rgb(255,164,48);">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/About.html" style="color: rgb(255,164,48);">About Us</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/Contact.html" style="color: rgb(255,164,49);">Contact Us</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
+    <!-- End: Navigation Clean -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
