--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4 offset-sm-2 offset-md-3 offset-lg-1" style="font-size: 19px;">
-                    <ul class="text-left" style="color: rgb(255,255,255);font-size: 20px;">
+                    <ul class="text-left" style="color: rgb(44,218,0);font-size: 20px;">
                         <li>Electrical systems</li>
                         <li>Brakes, rotors and hoses</li>
                         <li>Drivelines</li>
@@ -72,9 +72,9 @@
                     </ul>
                 </div>
                 <div class="col-sm-8 col-md-6 col-lg-4 offset-sm-2 offset-md-3 offset-lg-2">
-                    <h2 style="color: rgb(255,255,255);"><strong><em>Hours of Operation</em></strong></h2>
-                    <ul class="list-unstyled text-center" style="color: rgb(255,255,255);font-size: 20px;">
-                        <li>Sun. &nbsp; &nbsp;Closed</li>
+                    <h2 style="color: rgb(49,197,240);"><strong><em>Hours of Operation</em></strong></h2>
+                    <ul class="list-unstyled text-center" style="color: rgb(44,204,0);font-size: 20px;">
+                        <li style="color: rgb(248,65,61);">Sun. &nbsp; &nbsp;Closed</li>
                         <li>Mon. &nbsp; 8am - 7pm</li>
                         <li>Tue. &nbsp; &nbsp;8am - 7pm</li>
                         <li>Wed. &nbsp; 8am - 7pm</li>
