--- a/Contact.html
+++ b/Contact.html
@@ -30,6 +30,16 @@
         </div>
     </div>
     <!-- End: 1 Row 2 Columns -->
+    <!-- Start: 1 Row 2 Columns -->
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-1 offset-4 offset-sm-4 offset-lg-5 text-center"><img class="rounded img-fluid" src="/assets/img/facebook-logo-square.png?h=4b88a84c958f995e0081d1e9496b52a1"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-1 offset-0 offset-sm-0 text-center"><a href="https://www.google.com/maps/place/1945+Coronado+Rd,+Fort+Myers,+FL+33901/@26.6209706,-81.8749259,17z/data=!3m1!4b1!4m5!3m4!1s0x88db41d0e7533301:0x868505a071ed940e!8m2!3d26.6209706!4d-81.8727372" target="_blank"><img class="rounded img-fluid" src="/assets/img/Google-Adds-Ride-Sharing-Services-to-Google-Maps-Transit-Times.png?h=c819eaff22c7125bdc85bd2d9aa487e3"></a></div>
+            </div>
+        </div>
+    </div>
+    <!-- End: 1 Row 2 Columns -->
     <div class="col">
         <p class="text-center" style="color: rgb(255,255,255);">© 2020 Budget Auto Repair&nbsp;™<br></p>
     </div>
