--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
     <div style="margin-top: 11px;">
         <div class="container">
             <div class="row">
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-md-1 offset-lg-1 text-center"><a href="tel:239-590-8375" target="_blank"><img class="rounded img-fluid" src="/assets/img/cnBudget.jpg?h=660d2dc0622cce05de8162ae2a766fd9"></a></div>
-                <div class="col-6 col-sm-5 col-md-4 col-lg-4 offset-sm-2 offset-md-2 offset-lg-2 text-center"><a href="mailto:budgetrepairfortmyers@gmail.com" target="_blank"><img class="rounded img-fluid" src="/assets/img/semBudget.jpg?h=336af696c61838cb025836c21e18b3b3"></a></div>
-            </div>
+                <div class="col-4 col-sm-4 col-md-4 col-lg-4 offset-md-0 offset-lg-0 text-center"><a href="tel:239-590-8375" target="_blank"><img class="rounded img-fluid" src="/assets/img/cnBudget.jpg?h=660d2dc0622cce05de8162ae2a766fd9"></a></div>
+                <div class="col-2 col-lg-2 text-center"><img class="rounded img-fluid" src="/assets/img/facebook-logo-square.png?h=4b88a84c958f995e0081d1e9496b52a1"></div>
+                <div class="col-2 text-center"><a href="https://www.google.com/maps/place/1945+Coronado+Rd,+Fort+Myers,+FL+33901/@26.6209706,-81.8749259,17z/data=!3m1!4b1!4m5!3m4!1s0x88db41d0e7533301:0x868505a071ed940e!8m2!3d26.6209706!4d-81.8727372" target="_blank"><img class="rounded img-fluid" src="/assets/img/Google-Adds-Ride-Sharing-Services-to-Google-Maps-Transit-Times.png?h=c819eaff22c7125bdc85bd2d9aa487e3"></a></div>
+                <div
+                    class="col-4 col-sm-4 col-md-4 col-lg-4 offset-sm-0 offset-md-0 offset-lg-0 text-center"><a href="mailto:budgetrepairfortmyers@gmail.com" target="_blank"><img class="rounded img-fluid" src="/assets/img/semBudget.jpg?h=336af696c61838cb025836c21e18b3b3"></a></div>
         </div>
+    </div>
     </div>
     <!-- End: 1 Row 2 Columns -->
     <!-- Start: 1 Row 1 Column -->
