--- a/index.html
+++ b/index.html
@@ -37,7 +37,26 @@
     <div style="margin-top: 72px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 col-lg-12 text-center"><img class="rounded img-fluid" src="/assets/img/budgetHeader.jpg?h=2a82cdbee410c5a29b1316e3cac6b5b1"></div>
+                <div class="col">
+                    <div class="carousel slide" data-ride="carousel" data-pause="false" id="carousel-1">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active"><img class="img-fluid w-100 d-block" src="/assets/img/budgetHeader.jpg?h=2a82cdbee410c5a29b1316e3cac6b5b1" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                        </div>
+                        <div>
+                            <!-- Start: Previous --><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a>
+                            <!-- End: Previous -->
+                            <!-- Start: Next --><a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>
+                            <!-- End: Next -->
+                        </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                        </ol>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
