--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
                 <div class="col">
                     <div class="carousel slide" data-ride="carousel" data-pause="false" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active"><img class="img-fluid w-100 d-block" src="/assets/img/budgetHeader.jpg?h=2a82cdbee410c5a29b1316e3cac6b5b1" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                            <div class="carousel-item active"><img class="img-fluid w-100 d-block" src="/assets/img/budgetHeader2.jpg?h=57e5d75a1b8f4d92998f6670b2fd18a4" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/ac.jpg?h=b2f77effac3fcc61e690ce733077c531" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/tires.jpg?h=c955e7a751e3d37519095a70741730d1" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/brakes2.jpg?h=4ce0ae37c911a8b7560b0a2266afe94f" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/mufflrs.jpg?h=eca9a321096fed2d1aa55936dba14654" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/oil2.jpg?h=cdb2639da4dd74a1ed75fabb66cdeae1" alt="Slide Image"></div>
                         </div>
                         <div>
                             <!-- Start: Previous --><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a>
@@ -54,6 +57,9 @@
                             <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-1" data-slide-to="1"></li>
                             <li data-target="#carousel-1" data-slide-to="2"></li>
+                            <li data-target="#carousel-1" data-slide-to="3"></li>
+                            <li data-target="#carousel-1" data-slide-to="4"></li>
+                            <li data-target="#carousel-1" data-slide-to="5"></li>
                         </ol>
                     </div>
                 </div>
