--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div style="margin-top: 72px;">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-10 offset-lg-1">
                     <div class="carousel slide" data-ride="carousel" data-pause="false" id="carousel-1">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><img class="img-fluid w-100 d-block" src="/assets/img/budgetHeader2.jpg?h=57e5d75a1b8f4d92998f6670b2fd18a4" alt="Slide Image"></div>
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4 offset-sm-2 offset-md-3 offset-lg-1" style="font-size: 19px;">
                     <ul class="text-left" style="color: rgb(44,218,0);font-size: 20px;">
-                        <li>Electrical systems</li>
+                        <li style="color: #2cda00;">Electrical systems</li>
                         <li>Brakes, rotors and hoses</li>
                         <li>Drivelines</li>
                         <li>Engine diagnostics</li>
