--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
                         <li>Give you advice to improve your driving security<br></li>
                         <li>Offer on-going training to our personnel so they remain at the forefront of technological advancement<br></li>
                     </ul>
-                    <h3 class="text-center"><a href="tel:239-590-8375"><strong>Call Now (239)590-8375</strong></a></h3>
+                    <h3 class="text-center"><a href="tel:239-590-8375"><strong><span style="text-decoration: underline;">Call Now (239)590-8375</span></strong></a></h3>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
     <!-- Start: Navigation Clean -->
     <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
         <div class="container">
-            <a class="navbar-brand" href="#" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
+            <a class="navbar-brand" href="https://budgetrepairswfl.com/" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
                 <p style="margin-left: 12px;height: 0;width: 0;"><img src="/assets/img/Budget%20Logo.png?h=43a141b0e0a82c7de25deae7993b5ea1" style="height: 33px;margin-bottom: 13px;margin-top: -12px;"></p>
             </a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="font-size: 14px;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon" style="background-color: #ffa430;"></span></button>
             <div
