--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center"><img class="img-fluid" src="/assets/img/budgetmap2.jpg?h=a652d20c8a7c80dd11986ac4be36439c"></div>
                 <div class="col-md-8 offset-md-2 text-center">
-                    <h2 class="text-center" style="color: rgb(255,255,255);margin-bottom: -6px;"><strong><em>Contact Us:</em></strong></h2><a href="tel:239-590-8375" style="font-size: 23px;margin-top: 6px;"><strong>(239)590-8375</strong></a>
+                    <h2 class="text-center" style="color: rgb(255,255,255);margin-bottom: -6px;"><strong><em>Contact Us:</em></strong></h2><a href="tel:239-590-8375" style="font-size: 23px;margin-top: 6px;"><strong><span style="text-decoration: underline;">(239)590-8375</span></strong></a>
                     <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -6px;">Budget Auto Repair</h3>
                     <h3 class="text-center" style="color: rgb(255,164,48);margin-bottom: -3px;"></h3>
                     <h5 class="text-center" style="color: rgb(255,164,48);margin-bottom: -2px;margin-top: 7px;">1945 Coronado Road</h5>
@@ -46,7 +46,7 @@
     <!-- Start: Navigation Clean -->
     <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background-color: rgb(0,0,0);color: #ffa430;">
         <div class="container">
-            <a class="navbar-brand" href="#" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
+            <a class="navbar-brand" href="https://budgetrepairswfl.com/" style="font-family: 'Roboto Condensed', sans-serif;padding-top: 0;padding-bottom: 0;margin-right: 0;height: auto;width: 174px;">
                 <p style="margin-left: 12px;height: 0;width: 0;"><img src="/assets/img/Budget%20Logo.png?h=43a141b0e0a82c7de25deae7993b5ea1" style="height: 33px;margin-bottom: 13px;margin-top: -12px;"></p>
             </a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="font-size: 14px;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon" style="background-color: #ffa430;"></span></button>
             <div
