--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Budget</title>
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/assets/img/budgetFav.jpg?h=88a606e5038e9b65d6883da835cf9ee7">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Akronim">
